# partner_finding_probability

./: .gitignore  README.md
backend/api/: README.md  pyproject.toml
backend/api/JavaApi/: README.md  docker-compose.yml  pom.xml
backend/api/JavaApi/.run/: Quarkus-Dev-API.run.xml  Quarkus-Docker-Compose.run.xml
backend/api/JavaApi/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
backend/api/JavaApi/src/main/kubefiles/: deployment.yml  ingress-alb.yml  namespace.yml  node-port.yml  stateless-api-deployment.yml
backend/api/app/: __main__.py
backend/api/app/data/us/gender/: GenderDistribution.py
backend/api/app/data/us/income/: females_pinc11.csv  males_pinc11.csv
backend/api/app/data/us/orientation/: OrientationDistribution.py
backend/api/app/lib/data_analysis/Calculation/: _Calculation.py  __init__.py
backend/api/app/lib/models/: _BaseCalculationInputModel.py  _ErrorModel.py  _MainModel.py  __init__.py
backend/api/app/lib/models/Enums/: _Gender.py  _SexualOrientation.py  __init__.py
backend/api/app/lib/partner_finding_probability/calculations/us/: _Calculation.py  __init__.py
backend/api/app/src/: __init__.py
backend/api/app/src/calculate/: __init__.py  _router.py
backend/api/app/src/calculate/partner_finding_probability/: __init__.py  _router.py
backend/api/app/src/general/: __init__.py  _router.py
backend/api/app/src/general/_models/: server_time.py
frontend/telegram_bot/: pyproject.toml
frontend/telegram_bot/app/lib/db/mongo/: __init__.py
frontend/telegram_bot/locale/: en.yml
(+11 files in other folders)
