[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Anton <109826223+Arcadiyyyyyyyy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
